<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_catogry"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="Wallet" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/deliveryi"
            android:title="@string/Delivery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/AboutUs" />
        <item
            android:id="@+id/nav_feedBack"
            android:icon="@drawable/feedback"
            android:title="@string/FeedBack" />
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/call"
            android:title="@string/ContactUS" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/LogOut" />
    </group>
</menu>