<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navbar.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_delivery"
        android:name="com.example.navbar.ui.delivery.DeliveryTrackFragment"
        android:label="@string/Track"
        tools:layout="@layout/fragment_deliverytrack" />
    <fragment
        android:id="@+id/nav_feedBack"
        android:name="com.example.navbar.ui.feedback.FeedbackFragment"
        android:label="@string/FeedBack"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/nav_deliveries"
        android:name="com.example.navbar.ui.delivery.DeliveryTrackFragment"
        android:label="@string/Track"
        tools:layout="@layout/activity_main3" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.navbar.ui.about.AboutUsFragment"
        android:label="@string/AboutUs"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_contactUs"
        android:name="com.example.navbar.ui.contactus.ContactUsFragment"
        android:label="@string/ContactUS"
        tools:layout="@layout/fragment_contactus" />

</navigation>