<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <Button
        android:id="@+id/btnSave2"
        android:layout_width="@dimen/halfWidth"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:text="@string/Reply"
        android:textColor="#3949AB"
        android:textSize="@dimen/labelSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <Button
        android:id="@+id/btnSave3"
        android:layout_width="@dimen/halfWidth"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:text="@string/Reply"
        android:textColor="#3949AB"
        android:textSize="@dimen/labelSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/textView22"
        android:layout_width="364dp"
        android:layout_height="148dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/square"
        android:gravity="left"
        android:paddingStart="50dp"
        android:text="@string/message2"
        android:textSize="@dimen/labelSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="152dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="328dp"
        android:text="@string/product"
        android:textColor="@color/DarkBlue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="336dp"
        android:background="@color/DarkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView20"
        android:layout_width="372dp"
        android:layout_height="134dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/square"
        android:gravity="left"
        android:paddingStart="50dp"
        android:text="@string/message1"
        android:textSize="@dimen/labelSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/Delivery"
        android:textColor="@color/DarkBlue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>